name:                language-livescript
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
author:              Jacob Stanley
maintainer:          jacob@stanley.io
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable language-livescript
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:
      base        == 4.6.*
    , indents     == 0.3.*
    , parsec      == 3.*
    , mtl         == 2.*
    , text        == 0.11.*
    , pretty-show == 1.5.*
